<resources>
    <string name="app_name">TheGarden</string>
    <string name="title_home">Home</string>
    <string name="title_plants">Plants</string>
    <string name="title_profile">Profile</string>
    <string name="title_scan">Scan</string>

    <!-- for register -->
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="register_button_text">Register</string>

    <!-- ... your other string resources ... -->
    <string name="have_account">Have an account?</string>
    <string name="login_button_text">Login</string>
    <string name="label_dont_have_account">Don\'t have an account?</string>
    <string name="heading_one">Placement</string>
    <string name="heading_two">Lighting</string>
    <string name="heading_three">Foreign objects</string>
    <string name="desc_one">Make sure the plant is in the center of the photo</string>
    <string name="desc_two">Make sure the plant is sufficiently illuminated</string>
    <string name="desc_three">Avoid other plants and foreign objects in the frame</string>


    <string name="welcome_message">Hello %1$s,\nHow are you today?</string>

</resources>